@@ -1,6 +1,6 @@
 Package: stab
-Version: 0.1.6
-Date: 2013-09-24
+Version: 0.1.7
+Date: 2013-11-28
 Title: data analysis of drug stability for shelf life estimation
 Author: Hsin-ya Lee, Yung-jin Lee <mobilepk@gmail.com>
 Maintainer: Yung-jin Lee <mobilepk@gmail.com>
@@ -9,7 +9,7 @@ Description: data analysis of drug stability (shelf life estimation)
   based on ICH Q1E guideline.
 License: GPL (>= 2)
 URL: http://pkpd.kmu.edu.tw/stability
-Packaged: 2013-09-23 20:51:20 UTC; datawalker
+Packaged: 2013-11-28 18:59:49 UTC; datawalker
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-09-23 23:10:13
+Date/Publication: 2013-11-28 20:12:48
