@@ -1,10 +1,10 @@
-02907bf0a0e7477862ff2543ec6b2289 *DESCRIPTION
+8543baf960326a305695b4fb693f9005 *DESCRIPTION
 42e1b7da3af00d516f6b1e1e3c4b6d98 *NAMESPACE
-43267b4e62c7411cb3296e21b7436e44 *NEWS
-7944d288038407f8be44892218523d87 *R/MultipleAnalyze.r
+d889233531116be818260315aeeb9e9e *NEWS
+36fbbf5556efabe8229d76ed88182b96 *R/MultipleAnalyze.r
 f43a70781e0c47e11022975876e0d7e7 *R/MultipleBatchcsv.r
 90d5ffb7e41464ab2a681104a88f0e69 *R/MultipleBatchmenu.r
-7f104a35309111b83c9a882dd73935bc *R/SingleAnalyze.r
+78624b31585c294df6d58295c2be9b17 *R/SingleAnalyze.r
 1d4d9ce2c184e319998faa4947e2139d *R/SingleBatchcsv.r
 697e03ddb0c379e36c0aed011d84d2b0 *R/SingleBatchmenu.r
 64c65325b40e204861724871e1072baa *R/about.stab.r
@@ -12,11 +12,11 @@ bc5bcef3386e5cfa04351d72438dc003 *R/bye.r
 9384f9615834d742bc1b391fce32e826 *R/decisiontree.r
 03ffe004dd479893ac4c3f04300af1de *R/demostability.r
 7b03df40e2f15facc2fab385731ff916 *R/go.r
-7f9ee925cbfc69bf1f8bd620d19b7c92 *R/stab.version.r
+027909d2ba1226e0aa372a4a9133586c *R/stab.version.r
 dbc4dab5eb22517742189febde4b98c3 *R/stab_test.r
 5297a7d14e52713cbf2026bd4c57147a *R/stabilitymenu.r
 a2353b051c7d00e6425645c4a815fe88 *R/statistical.r
-93415de8c75ede17ad8fb60cef8679a1 *R/zzz.R
+dc1ba7684aaedd4fc115e5003f962eac *R/zzz.R
 3f1004bb4fc15d793e80699d90ccbdbe *demo/00Index
 55f8639db980e6a13bebb3087cb82b43 *demo/stab.demo.r
 32fc069bed9f326ccf78ab1658779f08 *inst/extdata/603.txt
